--- a/LikeEcharts.DAL/LikeEcharts.DAL.csproj
+++ b/LikeEcharts.DAL/LikeEcharts.DAL.csproj
@@ -5,6 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Capitals.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Capitals.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="12.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LikeECharts.Model\LikeEcharts.Model.csproj" />
   </ItemGroup>
 
