--- a/LikeEchartsMap/packages.config
+++ b/LikeEchartsMap/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="12.1.0" targetFramework="net472" />
   <package id="INotifyPropertyChangedExtensions" version="1.0.1" targetFramework="net472" />
   <package id="PropertyTools.Wpf" version="2.0.1" targetFramework="net472" />
   <package id="QuickConverter" version="1.2.5" targetFramework="net472" />
